add discord webhook ingester
